* Change font properties for station label to "monospace" for equal width
* Minor changes in program descriptions, example scripts 

aimbat-v0.2
============
Main contributor: lkloh. Last update on Aug 23, 2016

May 13, 2014:
* Added a warning button if you hit ICCS-A or ICCS-B button, to make sure do did not hit it by accident. 
Hitting one of those buttons will undo all the work you did in manually picking arrival times.
May 14, 2014:
* Added a button to allow you to jump to the front page. Note that hitting MCCC again will do just that. 
* Added a summary of the event at the top right hand corner. 
  Parameters:
  - Magnitude
  - Location
  - Depth
May 17, 2014:
* Added a GUI to allow sorting of the seismograms according to header, time difference, file name, ...
* Added a button to return to original screen after you zoom in/out

aimbat-v0.3-alpha1
============
June 3, 2018
* Upgrade to python3 (May not back-compatible with python2). No change in functionalities from v0.2.
* Include sacio in the same aimbat source package.

aimbat-v1.0.0
============
Dec 3, 2018
* Use new pysmo.core.sac.SacIO (pysmo-pysmo-v0.7.0) instead of pysmo.sac.sacio.SacFile
* New setup.py:
  ** Wrap all scripts into a callable function and add them to entry_point, e.g.,
     aimbat-ttpick is automatically generated in your bin folder.
  ** Use git commit/tag to determine version automatically.
* SAC plotting and aimbat-ttpick are still using Matplotlib GUI.
* New GUI (aimbat-qtpick) using pyqtgraph for fast plotting. Similar user interactions as v0.3:
  ** Key pressed event handler in pyqtgraph is redefined 
  ** Use mouse to change time window and press key 'w' to set <-- work on stack only
  ** Press key 't[0-9]' to set time picks like SAC PPK        <-- work on both stack and traces
  ** Mouse click on waveform to change trace selection status <-- work on trace only
* Better separation between data and plot.
* Filter and sort are both in the main GUI controlled by a parameter tree.