@@ -46,9 +46,10 @@ qweights = 0.3333 0.3333 0.3333
 ##############################################
 [iccs]
 srate = -1 
-### cross-correlation 
+### cross-correlation: full/fast/faster
+### cross-correlation: full/fast/faster_polarity to avoid reverse polarity
 xcorr_modu = xcorrf90
-xcorr_func = xcorr_fast
+xcorr_func = xcorr_faster_polarity
 shift = 10
 maxiter = 10
 ### convergence criterion
@@ -68,7 +69,7 @@ srate = -1
 ### output file: "$evdate".mc if mc
 ofilename = mc
 xcorr_modu = xcorrf90
-xcorr_func = xcorr_faster
+xcorr_func = xcorr_faster_polarity
 shift = 10
 extraweight = 1000.
 ### lsqr solution without weighting;
